Colaboratory를 통해 생성됨

--- a/Brain_MRI.ipynb
+++ b/Brain_MRI.ipynb
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "F_isIkPDbkKt"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -69,19 +69,18 @@
       "metadata": {
         "id": "LFUteKMiZ-z1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 682
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yQZtSToWWoC6",
-        "outputId": "3b56c8f9-38a6-4747-f4c8-763b2552203c"
+        "outputId": "09bb5632-515b-4018-d979-dd44bd5c53e9"
       },
       "outputs": [
         {
@@ -96,37 +95,26 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Epoch: 0, Loss: 2.1165013313293457\n",
-            "Epoch: 1, Loss: 2.0243799686431885\n",
-            "Epoch: 2, Loss: 1.9177144765853882\n",
-            "Epoch: 3, Loss: 1.8871276378631592\n",
-            "Epoch: 4, Loss: 1.444797396659851\n",
-            "Epoch: 5, Loss: 1.5488156080245972\n",
-            "Epoch: 6, Loss: 1.3294999599456787\n",
-            "Epoch: 7, Loss: 1.2578970193862915\n",
-            "Epoch: 8, Loss: 1.0789813995361328\n",
-            "Epoch: 9, Loss: 1.178954839706421\n",
-            "Epoch: 10, Loss: 1.0762529373168945\n",
-            "Epoch: 11, Loss: 1.0121171474456787\n",
-            "Epoch: 12, Loss: 0.9102741479873657\n",
-            "Epoch: 13, Loss: 0.8392756581306458\n",
-            "Epoch: 14, Loss: 0.8659420013427734\n",
-            "Epoch: 15, Loss: 0.8740743398666382\n",
-            "Epoch: 16, Loss: 0.70518958568573\n",
-            "Epoch: 17, Loss: 0.9190874099731445\n",
-            "Epoch: 18, Loss: 0.8221622705459595\n",
-            "Epoch: 19, Loss: 0.8598967790603638\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-4-ea604915a2fe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     45\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mdata\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_loader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 46\u001b[0;31m         \u001b[0mimages\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mimages\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     47\u001b[0m         \u001b[0moutputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0m_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mpredicted\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'images' is not defined"
+            "Epoch: 0, Loss: 2.2466158866882324\n",
+            "Epoch: 1, Loss: 2.012960910797119\n",
+            "Epoch: 2, Loss: 1.7423089742660522\n",
+            "Epoch: 3, Loss: 1.4400606155395508\n",
+            "Epoch: 4, Loss: 1.3816896677017212\n",
+            "Epoch: 5, Loss: 1.2244049310684204\n",
+            "Epoch: 6, Loss: 1.0217609405517578\n",
+            "Epoch: 7, Loss: 1.3096354007720947\n",
+            "Epoch: 8, Loss: 1.0151116847991943\n",
+            "Epoch: 9, Loss: 0.8440475463867188\n",
+            "Epoch: 10, Loss: 1.0583118200302124\n",
+            "Epoch: 11, Loss: 0.7847738265991211\n",
+            "Epoch: 12, Loss: 0.8970576524734497\n",
+            "Epoch: 13, Loss: 0.8276912569999695\n",
+            "Epoch: 14, Loss: 0.7303128242492676\n",
+            "Epoch: 15, Loss: 0.7203853130340576\n",
+            "Epoch: 16, Loss: 0.8269745111465454\n",
+            "Epoch: 17, Loss: 0.8832510709762573\n",
+            "Epoch: 18, Loss: 0.6974087953567505\n",
+            "Epoch: 19, Loss: 0.676308274269104\n"
           ]
         }
       ],
@@ -192,9 +180,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G31Sz0EEkwFv",
-        "outputId": "130fbfd0-f325-41e5-bd02-cfecf9016a5d"
+        "outputId": "1a17efe8-1618-449f-ab5d-aa0d3af572fb"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +196,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy: 62 %\n"
+            "Accuracy: 60 %\n"
           ]
         }
       ]
